docs: update impressum

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -22,7 +22,7 @@
 en:
   colophon:
     year: "© 2019-%{year}"
-    copyright: "Place Health Technology CIC"
+    copyright: "GFSC Community Interest Company"
     company: "Registered in England and Wales #12135472"
     address: "5 Ribston Street, Manchester, M15 5RH"
   contact:
