style(partners): Update neighbourhood display on location tab
- Create NeighbourhoodCardComponent to show neighbourhood with hierarchy
- Display current neighbourhood prominently with level badge
- Show parent hierarchy (England first) as colored badges beneath
- Update location tab to use card styling matching contact tab
- Add clock and car icons to svg_icons_helper
- Use neighbourhood card for service areas with existing selections
- Remove colon from neighbourhood label

--- a/config/locales/admin.en.yml
+++ b/config/locales/admin.en.yml
@@ -242,7 +242,7 @@ en:
     # Address fields
     address:
       clear_address: "Clear Address"
-      neighbourhood_label: "Neighbourhood:"
+      neighbourhood_label: "Neighbourhood"
 
     # Service areas
     service_areas:
