feat(partners): Add NeighbourhoodCardComponent and progressive disclosure for service areas
- Add NeighbourhoodCardComponent for displaying neighbourhood with hierarchy
- Update CascadingNeighbourhoodFieldsComponent with progressive disclosure
  - Show country and region fields initially
  - Reveal next field (greyed out) as selections are made
  - Labels aligned on left, fields on right in flex layout
- Add placeholder strings via locale data attributes
- Add clock and car icons to SVG helper
- Update location tab styling to match contact tab cards
- Add comprehensive tests for new components

--- a/config/locales/admin.en.yml
+++ b/config/locales/admin.en.yml
@@ -155,9 +155,9 @@ en:
       area: "District"
       ward: "Ward"
       select_country: "Select country..."
-      select_region: "Select region..."
-      select_county: "Select county..."
-      select_area: "Select district..."
+      select_region: "Select region (optional)..."
+      select_county: "Select county (optional)..."
+      select_area: "Select district (optional)..."
       select_ward: "Select ward (optional)..."
 
     datatable:
@@ -247,6 +247,7 @@ en:
     # Service areas
     service_areas:
       add: "Add Service Area"
+      new_area: "New Service Area"
 
     # Opening times
     opening_times:
