feat(tags): Improve tag/partnership admin UI
- Add lock icon to system tags in tag list
- Change Advanced section icon to lock on settings tab
- Enable form revert detection in save bar (trackInitialValues)
- Simplify partners tab to read-only table view
- Update translations for partners section
- Style partner count badge as pill
- Partnership edit now uses shared tag form (STI)
- Fix partial paths for cross-controller rendering

--- a/config/locales/admin.en.yml
+++ b/config/locales/admin.en.yml
@@ -111,6 +111,7 @@ en:
     hints:
       email_validation: "Enter a valid email address"
       leave_blank_to_autogenerate: "Leave blank to auto-generate from name"
+      select_to_add: "Select to add to this tag"
       shown_publicly: "Shown on PlaceCal to the public."
       url_validation: "Enter a valid URL (including https://)"
 
@@ -460,8 +461,8 @@ en:
 
     tags:
       sections:
-        tagged_partners: "Tagged Partners"
-        tagged_partners_description: "Apply this tag to the given partners"
+        tagged_partners: "Partners with this tag"
+        tagged_partners_description: ""
         assigned_users: "Assigned Users"
         assigned_users_description: "Grant permission to assign this tag"
 
