feat(articles): Redesign article edit page with tabs and markdown preview
- Add tabbed interface for existing articles (Text, Image, References, Settings)
- Large title field at top with prominent styling
- Side-by-side markdown editor and live preview
- Author field with tom-select styling
- New markdown-preview Stimulus controller for client-side rendering
- Add markdown-preview CSS partial for preview styling
- Support paragraph breaks, auto-linking URLs, headers, lists, code blocks
- Move publication date info to top of text tab
- References tab with partners and partnerships sections
- Settings tab with publish toggle and danger zone

--- a/config/locales/admin.en.yml
+++ b/config/locales/admin.en.yml
@@ -29,6 +29,7 @@ en:
       online_presence: "Online Presence"
       opening_times: "Opening Times"
       public_contact: "Public Contact"
+      publishing: "Publishing"
       service_areas: "Service Areas"
       upcoming_events: "Upcoming Events"
       url_settings: "URL Settings"
