fix(a11y): Resolve accessibility violations in admin interface
- Fix color contrast by using text-placecal-orange-dark for links
- Fix color contrast for buttons using bg-orange-700 instead of bg-orange-500
- Replace legend elements with f.label for proper form field labeling
- Fix heading order by using h2 instead of h3 in components
- Add aria-label to tom-select elements and copy to generated inputs
- Remove await_datatables from non-datatable pages in accessibility spec

--- a/config/locales/admin.en.yml
+++ b/config/locales/admin.en.yml
@@ -250,7 +250,7 @@ en:
     # Calendars
     # -------------------------------------------------------------------------
     calendars:
-      handbook_hint_html: 'See the <a href="https://handbook.placecal.org" class="link link-hover text-placecal-orange" target="_blank">handbook</a> for setup instructions'
+      handbook_hint_html: 'See the <a href="https://handbook.placecal.org" class="link link-hover text-placecal-orange-dark" target="_blank">handbook</a> for setup instructions'
       wizard:
         title: "Create a New Calendar"
         subtitle: "Connect an event source to start importing events into PlaceCal"
