feat(users): Add new user wizard with email validation
- Create 2-step user wizard (Personal Details + Permissions)
- Add live email validation with duplicate checking
- Add lookup_email endpoint to users controller
- Extend SaveBarComponent with wizard mode for client-side navigation
- Update partner and calendar wizards to use SaveBarComponent
- Rename uk_admin role to national_admin
- Redirect to edit page after user creation

--- a/config/locales/admin.en.yml
+++ b/config/locales/admin.en.yml
@@ -529,7 +529,7 @@ en:
         role_hint: "Determines the user's system-wide access level and permissions."
       roles:
         root: "Can do everything - use with care!"
-        uk_admin: "UK-wide neighbourhood admin - can manage all UK neighbourhoods"
+        national_admin: "Can manage all partners unless restricted to partnerships"
         editor: "Can edit all news articles"
         citizen: "Can only edit assigned entities"
       actions:
