feat(calendars): Enhance index with importer column, better icons, and cell alignment
- Add Importer column showing parser name (e.g., Eventbrite, Generic iCal)
- Add Importer filter dropdown with human-readable names from parsers
- Show 'Pending Import' for calendars that haven't completed import
- Add import icon for Status column header
- Add search_alert icon for Notices column header
- Add link_off icon for bad_source status (distinct from error)
- Fix cell alignment for centered columns (events, notices, status)
- Add Lucide icons credit and ISC license to svg_icons_helper.rb
- Move pending import text to locale file

--- a/config/locales/admin.en.yml
+++ b/config/locales/admin.en.yml
@@ -315,9 +315,10 @@ en:
       importer:
         importing: "Importing..."
         last_import: "Last import:"
-        notices: "Import Notices"
+        notices: "Import notices"
+        pending: "Pending import"
         reimport: "Re-import now"
-        retry_import: "Retry Import"
+        retry_import: "Retry import"
         source_changed: "Source changed:"
         status_label: "Status:"
         success: "Success"
