style(partners): Move filter labels to locale, use tom-select for Partnership
- Add has_calendar and has_admin filter labels to locale
- Add yes/no to shared labels
- Use t() for filter labels and options
- Partnership filter uses tom-select for searchable dropdown
- Calendar and Admins use radio button style

--- a/config/locales/admin.en.yml
+++ b/config/locales/admin.en.yml
@@ -85,9 +85,11 @@ en:
       issues: "Issues"
       loading: "Loading..."
       locked: "Locked"
+      no: "No"
       none: "None"
       required: "*"
       visible: "Visible"
+      yes: "Yes"
 
     # Placeholders
     placeholders:
@@ -385,6 +387,9 @@ en:
     # Partners
     # -------------------------------------------------------------------------
     partners:
+      filters:
+        has_calendar: "Has Calendar?"
+        has_admin: "Has Admin?"
       sections:
         admins_description: "Users who can manage this partner."
         basic_info_description: "Enter the core details about your partner organisation."
