feat(partners): Add existing user selector on Admins tab
- Add StackedListSelectorComponent for adding existing users as admins
- Add options_for_partner_users helper method
- Rename button to 'Invite new admin'
- Add locale strings for admin management

--- a/config/locales/admin.en.yml
+++ b/config/locales/admin.en.yml
@@ -390,6 +390,9 @@ en:
       filters:
         has_calendar: "Has Calendar?"
         has_admin: "Has Admin?"
+      admins:
+        add_existing: "Add existing user..."
+        add_new: "Invite new admin"
       sections:
         admins_description: "Users who can manage this partner."
         basic_info_description: "Enter the core details about your partner organisation."
