--- a/config/locales/admin.en.yml
+++ b/config/locales/admin.en.yml
@@ -249,6 +249,33 @@ en:
       opens: "Opens"
 
     # -------------------------------------------------------------------------
+    # Articles
+    # -------------------------------------------------------------------------
+    articles:
+      sections:
+        details: "Article Details"
+      fields:
+        title_placeholder: "Enter article title..."
+        published: "Published"
+        not_published: "Not published"
+      markdown:
+        write: "Write"
+        preview: "Preview"
+        preview_placeholder: "Start typing to see preview..."
+        toolbar:
+          bold: "Bold (Ctrl+B)"
+          italic: "Italic (Ctrl+I)"
+          link: "Link"
+          h2: "Heading 2"
+          h3: "Heading 3"
+          bullet_list: "Bullet list"
+          blockquote: "Blockquote"
+          code: "Code"
+      image:
+        title: "Article Image"
+        description: "This image will appear at the top of the article and in social media previews."
+
+    # -------------------------------------------------------------------------
     # Calendars
     # -------------------------------------------------------------------------
     calendars:
@@ -348,6 +375,25 @@ en:
     # Neighbourhoods
     # -------------------------------------------------------------------------
     neighbourhoods:
+      index:
+        title: "Neighbourhoods"
+        columns:
+          neighbourhood: "Neighbourhood"
+          level: "Level"
+          hierarchy: "Hierarchy"
+          partners: "Partners"
+          release: "Release"
+        levels:
+          ward: "Ward (L1)"
+          district: "District (L2)"
+          county: "County (L3)"
+          region: "Region (L4)"
+          country: "Country (L5)"
+        release:
+          current: "Current"
+          legacy: "Legacy"
+        roots_title: "Neighbourhood Roots"
+        ons_release: "ONS Latest Release Date Loaded: %{date}"
       form:
         admins_description: "The list of users with admin rights to this neighbourhood."
         admins_title: "Neighbourhood admins"
