fix: YAML boolean keys, color contrast, and cucumber radio filters
- Quote 'yes' and 'no' keys in locale file (YAML parses unquoted as booleans)
- Improve radio filter button contrast from text-gray-500 to text-gray-600
- Update cucumber tests for radio button filters (Has Calendar?/Has Admin?)

--- a/config/locales/admin.en.yml
+++ b/config/locales/admin.en.yml
@@ -79,11 +79,11 @@ en:
       issues: "Issues"
       loading: "Loading..."
       locked: "Locked"
-      no: "No"
+      "no": "No"
       none: "None"
       required: "*"
       visible: "Visible"
-      yes: "Yes"
+      "yes": "Yes"
 
     # Placeholders
     placeholders:
