fix(a11y): Improve nav contrast ratio and add missing translations
- Change active nav background from placecal-orange to placecal-orange-dark
  (contrast ratio 4.98:1, meets WCAG AA requirement of 4.5:1)
- Add missing admin.leftbar.* translations for all nav items

--- a/config/locales/admin.en.yml
+++ b/config/locales/admin.en.yml
@@ -171,14 +171,24 @@ en:
       sign_out: "Sign out"
 
     leftbar:
+      articles: "Articles"
       build: "Build"
+      calendars: "Calendars"
+      collections: "Collections"
       content_types: "Content types"
       discord: "Discord"
       get_support: "Get support"
       handbook: "Handbook"
       import_status: "Import status"
       in_development: "In development"
+      neighbourhoods: "Neighbourhoods"
+      partners: "Partners"
+      partnerships: "Partnerships"
       report_bug: "Report a bug"
+      sites: "Sites"
+      supporters: "Supporters"
+      tags: "Tags"
+      users: "Users"
 
     # =========================================================================
     # PAGES
