Extract API base class and rewrite TicketSource to use REST API
- Add Parsers::ApiBase with shared auth, HTTP, and error handling
- Refactor Tickettailor to inherit from ApiBase (removes duplicated code)
- Rewrite Ticketsource from web scraper to REST API client (api.ticketsource.io)
- The old scraper was broken by Cloudflare JS challenges (403s)
- Add Events::TicketsourceEvent for mapping API response fields
- Skip HTTP source validation for API-based parsers (skip_source_validation?)
- Show API key field in wizard/settings for ticketsource calendars
- Update i18n hint text to mention both providers

--- a/config/locales/admin.en.yml
+++ b/config/locales/admin.en.yml
@@ -325,8 +325,8 @@ en:
         partner_organiser: "Partner Organiser"
         source_placeholder: "https://your-domain.com/events.ics"
         api_token: "API Key"
-        api_token_hint: "Required for Ticket Tailor. You can find this in your Ticket Tailor account under Box Office > API Keys."
-        api_token_placeholder: "sk_..."
+        api_token_hint: "Required for Ticket Tailor and TicketSource. Find this in your account settings under API Keys."
+        api_token_placeholder: "Enter your API key"
         strategy_hint: "Where should location information for this calendar come from?"
       strategy:
         place: "Always use the calendar's default location (default)."
